--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=postgres
-spring.datasource.password=root
-#spring.datasource.password=Kalyani@123
+#spring.datasource.password=root
+spring.datasource.password=Kalyani@123
 #spring.datasource.password= badal@2020
 spring.jackson.serialization.write-dates-as-timestamps=false
 
